# coflo

./: .cproject  .hgignore  .project  Makefile.am  NEWS  NEWS.in  README  amlocal.am  configure.ac
build-aux/: coflo_version_control_info  svn-version-gen
cppunit_tests/: Makefile.am
cppunit_tests/controlflowgraph/: GraphTest.h  Makefile.am
doc/: MainPage.dox  Makefile.am  index.html  index.template.html
m4/: boost.m4  coflo_arg_with_dir.m4  coflo_arg_with_file.m4  coflo_search_package.m4  coflo_source_control_version.m4  coflo_version_control_info.m4
src/: Analyzer.cpp  Analyzer.h  BasicBlockGraph.h  Block.cpp  Block.h  CFGDFSVisitor.cpp  CFGDFSVisitor.h  CFGEdgeTypeBase.h  CFGEdgeTypeFallthrough.cpp  CFGEdgeTypeFallthrough.h  CFGEdgeTypeFunctionCall.h  CFGEdgeTypeGoto.cpp  CFGEdgeTypeGotoBackEdge.h  CFGEdgeTypeReturn.cpp  CFGEdgeTypeReturn.h  ControlFlowGraph.cpp  ControlFlowGraph.h  Doxyfile  Entry.cpp  Entry.h  Exit.cpp  Exit.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  FunctionCallResolved.cpp  FunctionCallResolved.h  FunctionCallUnresolved.cpp  FunctionCallUnresolved.h  If.cpp  If.h  ImprovedDFSVisitorBase.h  Location.cpp  Location.h  Makefile.am  NoOp.cpp  NoOp.h  Program.cpp  Program.h  (+33 more)
src/controlflowgraph/: BackEdgeFixupVisitor.cpp  BackEdgeFixupVisitor.h  CFGDFSVisitor.cpp  CFGDFSVisitor.h  CFGEdgeTypeBase.cpp  CFGEdgeTypeBase.h  CFGEdgeTypeFallthrough.cpp  CFGEdgeTypeFallthrough.h  CFGEdgeTypeFalseExit.cpp  CFGEdgeTypeFalseExit.h  CFGEdgeTypeFunctionCall.cpp  CFGEdgeTypeFunctionCall.h  CFGEdgeTypeFunctionCallBypass.cpp  CFGEdgeTypeFunctionCallBypass.h  CFGEdgeTypeReturn.cpp  CFGEdgeTypeReturn.h  CallStackBase.h  CallStackFrameBase.cpp  CallStackFrameBase.h  ControlFlowGraph.cpp  ControlFlowGraph.h  ControlFlowGraphTraversalBase.cpp  ControlFlowGraphTraversalBase.h  ControlFlowGraphTraversalDFS.cpp  ControlFlowGraphTraversalDFS.h  ControlFlowGraphVisitorBase.cpp  ControlFlowGraphVisitorBase.h  ControlFlowGraph_test.cpp  DFSCallStack.cpp  DFSCallStack.h  DFSCallStack_test.cpp  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphAdapter.h  GraphTest.cpp  GraphTest.h  ImprovedDFSVisitorBase.h  Makefile.am  (+7 more)
src/controlflowgraph/algorithms/: Makefile.am  cfg_algs.cpp  cfg_algs.h  depth_first_traversal.hpp  topological_visit_kahn.h
src/controlflowgraph/analysis/: Analyzer.cpp  Makefile.am  RuleDFSBase.h  RuleReachability.cpp  RuleReachability.h
src/controlflowgraph/edges/: CFGEdgeTypeBase.cpp  CFGEdgeTypeBase.h  CFGEdgeTypeFallthrough.h  CFGEdgeTypeFunctionCall.cpp  CFGEdgeTypeFunctionCall.h  CFGEdgeTypeFunctionCallBypass.cpp  CFGEdgeTypeFunctionCallBypass.h  CFGEdgeTypeIfFalse.h  CFGEdgeTypeIfTrue.h  CFGEdgeTypeImpossible.h  CFGEdgeTypeReturn.cpp  CFGEdgeTypeReturn.h  Makefile.am  edge_types.h
src/controlflowgraph/statements/: FlowControlBase.h  FunctionCall.cpp  FunctionCall.h  FunctionCallResolved.cpp  FunctionCallResolved.h  FunctionCallUnresolved.cpp  If.cpp  If.h  Label.h  Makefile.am  Merge.cpp  Merge.h  NoOp.h  ParseHelpers.cpp  ParseHelpers.h  PseudoStatement.h  Statement.cpp  Statement.h  StatementBase.cpp  StatementBase.h  Switch.cpp  Switch.h  statements.h
src/controlflowgraph/visitors/: BackEdgeFixupVisitor.cpp  BackEdgeFixupVisitor.h  ControlFlowGraphOutputVisitor.cpp  ControlFlowGraphOutputVisitor.h  ControlFlowGraphVisitorBase.cpp  ControlFlowGraphVisitorBase.h  FunctionCFGVisitor.cpp  FunctionCFGVisitor.h  FunctionCFGVisitor_test.cpp  ImprovedDFSVisitorBase.h  Makefile.am  ReachabilityVisitor.cpp  ReachabilityVisitor.h  WriteGraphvizDotFileVisitor.cpp  WriteGraphvizDotFileVisitor.h  WriteGraphvizDotFileVisitor_test.cpp
src/debug/: Makefile.am  debug_utils.cpp  debug_utils.hpp
src/debug_utils/: Makefile.am  coflo_exceptions.hpp  debug_utils.cpp  debug_utils.hpp
src/graph/: DescriptorBaseClass.cpp  DescriptorBaseClass.h  Edge.cpp  Graph.h  GraphAdapter.cpp  GraphAdapter.h  Vertex.cpp  Vertex.h  VertexID.cpp  VertexID.h
src/libexttools/: Makefile.am  ToolBase.cpp  ToolBase.h  ToolCompiler.cpp  ToolCompiler.h  ToolDot.cpp  ToolDot.h  VersionNumber.cpp  VersionNumber.h  toollib.cpp  toollib.h
src/parsers/: ASTNode.cpp  ASTNode.h  ASTNode_test.cpp  Makefile.am  ParserBaseClass.cpp  ParserBaseClass.h  Token.cpp  Token.h  Token_test.cpp  coflo_c_parser.dparser.g  coflo_c_parser.h  coflo_c_parser_expressions.include.g  coflo_c_parser_extensions.include.g  coflo_c_parser_preprocessor.include.g  coflo_c_parser_statements.include.g  coflo_c_parser_terminals.include.g  gcc_gimple_parser.dparser.g  gcc_gimple_parser.g  gcc_gimple_parser.h  parser_grammar_helper.h  parser_helper_defs.h
src/statements/: Entry.cpp  Entry.h  Exit.cpp  FunctionCall.cpp  FunctionCall.h  FunctionCallResolved.cpp  FunctionCallUnresolved.cpp  FunctionCallUnresolved.h  If.cpp  If.h  Makefile.am  NoOp.cpp  NoOp.h  Placeholder.cpp  Placeholder.h  PseudoStatement.cpp  PseudoStatement.h  Statement.cpp  Statement.h  Switch.cpp  Switch.h
src/templates/: FileTemplate.cpp  FileTemplate.h  FileTemplate_test.cpp  Makefile.am  index.template.html  templates.h
src/templates/css/: index.template.css
src/templates/js/: coflo.resizer.js
src/templates/js/coflo/: coflo-report.js
test/: Makefile.am  atlocal.in  test1.sh  test_source_file_1.c  test_source_file_2.c  test_template.sh  test_use_compiler_i686-pc-mingw32-gcc-4.5.2.sh  testsuite.at
tests/: Makefile.am  atlocal.in  constraints.at  loop_test_1.c  responsefile-test1.txt  structuring_compound_conditions.at  test_source_file_1.c  test_source_file_2.c  testsuite.at
tests/test_src_1/: Thread2.c  ThreadUnsafeFunctions.c  ThreadUnsafeFunctions.h  check.sh
util/: interceptor.sh
